# Quetzalcoatl

./: .gitignore  Credits.txt  PitchSliders.xml  QuetzalcoatlDesktop.xml  README.md  old.md  project_info.xml
.github/: FUNDING.yml
DspNetworks/: Networks.xml
First Sun/: expansion_info.xml
Images/: button1.afdesign  button2.afdesign  circle.afdesign  filterframe.aftemplate  osc1frame.afdesign  qrin4.afdesign  sliderbg.afdesign  tecknob.afdesign
Korg Monopoly/: expansion_info.xml
OSC Redesign/: README.md
Presets/: Autosave_1.hip  Autosave_2.hip  Autosave_3.hip  Autosave_4.hip  Autosave_5.hip  Preset.hip  test.hip  vec.hip  vecfm.hip
Quetzalcoatl/: Shape1.xml  project_info.xml  user_info.xml
Quetzalcoatl-EX/: project_info.xml
Quetzalcoatl/Quetzalcoatl/OSC Redesign/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Quetzalcoatl/Quetzalcoatl/OSC Redesign/apps/: osc_ui.mm  standalone_audio.cpp
Quetzalcoatl/Quetzalcoatl/OSC Redesign/docs/: MVP-Spec.md
Quetzalcoatl/Quetzalcoatl/OSC Redesign/include/: CombiOscEngine.h  CombiOscVoice.h  IPlayableSource.h  MultiSampleSource.h  OscTypes.h  SampleOscSource.h  VAOscSource.h  WTOscSource.h
Quetzalcoatl/Quetzalcoatl/OSC Redesign/src/: CombiOscEngine.cpp  CombiOscVoice.cpp  MultiSampleSource.cpp  OscTypes.cpp  SampleOscSource.cpp  VAOscSource.cpp  WTOscSource.cpp
Quetzalcoatl/Quetzalcoatl/OSC Redesign/tests/: smoke.cpp
SampleMaps/: Clock2.xml
Unused Expansions/: Trouble.xml
User Sample tutorial /: README.md
XmlPresetBackups/: test.xml  vecfm.xml
affinity/: button1.afdesign  button2.afdesign  (+7 more)
(+5238 files in other folders)
